@@ -1,1 +1,1 @@
-RADIANCE 3.8a
+RADIANCE 3.7.2
